Room database, 메인 화면 띄우기 추가.

--- a/app/src/main/res/navigation/nav_subway_frag.xml
+++ b/app/src/main/res/navigation/nav_subway_frag.xml
@@ -15,5 +15,9 @@
     <fragment
         android:id="@+id/searchViewFragment"
         android:name="com.tictoccroc.subway_app.view.searchViewFragment"
-        android:label="searchViewFragment" />
+        android:label="searchViewFragment" >
+        <action
+            android:id="@+id/action_searchViewFragment_to_mainViewFragment"
+            app:destination="@id/mainViewFragment" />
+    </fragment>
 </navigation>
