--- a/app/src/main/res/layout/fragment_main_view.xml
+++ b/app/src/main/res/layout/fragment_main_view.xml
@@ -73,6 +73,7 @@
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_results"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="9dp"
