--- a/app/src/main/res/layout/fragment_search_view.xml
+++ b/app/src/main/res/layout/fragment_search_view.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -42,15 +44,17 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginTop="20dp"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="20dp"
             android:background="#F9F9F9"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.454"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            android:orientation="vertical">
+            app:layout_constraintVertical_bias="0.0">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvSearch"
@@ -67,8 +71,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:weightSum="10"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:weightSum="10">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -79,16 +83,16 @@
 
                     <EditText
                         android:id="@+id/edit_keyword"
-                        android:layout_weight="10"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginLeft="2dp"
+                        android:layout_weight="10"
+                        android:background="@android:color/transparent"
                         android:bufferType="spannable"
+                        android:hint="역 이름을 입력하세요."
                         android:includeFontPadding="false"
                         android:lineSpacingExtra="0dp"
-                        android:hint="역 이름을 입력하세요."
-                        android:background="@android:color/transparent"
                         android:singleLine="false" />
 
                     <ImageView
@@ -103,12 +107,14 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvSubwayList"
-                android:layout_marginLeft="11dp"
-                android:layout_marginRight="11dp"
+                android:clipToPadding="false"
+                android:overScrollMode="never"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_marginLeft="11dp"
+                android:layout_marginRight="11dp" />
+
+
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
-
-
